# rusty-fim

./: .gitignore  Cargo.toml  README.md  fim.toml
benches/: hash_benchmark.rs
examples/: complete_demo.rs
src/: database.rs  fim.rs  hasher.rs  lib.rs  main.rs  reporting.rs  watcher.rs
